XO_Project_UAT/Project--XOGrp--UAT/src/objects/Send_Email_Setting__mdt.object
<CustomObject>
    <description>For send email setting, such as sender address, receiver address, email template Id.</description>
    <fields>
        <fullName>Email_Template_API_Name__c</fullName>
        <label>Email Template API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receiver_Address__c</fullName>
        <label>Receiver Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Send_To_Queue_API_Name__c</fullName>
        <label>Send To Queue API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Address__c</fullName>
        <label>Sender Address</label>
        <type>Email</type>
    </fields>
    <label>Send Email Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>IsActive__c</columns>
        <columns>DeveloperName</columns>
        <columns>Email_Template_API_Name__c</columns>
        <columns>Receiver_Address__c</columns>
        <columns>Sender_Address__c</columns>
        <columns>Send_To_Queue_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Send Email Settings</pluralLabel>
</CustomObject>